--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",  
-  "files": ["dist"],           
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "docs": "typedoc"
   },
-  "type": "commonjs",          
+  "type": "commonjs",
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.11",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.1",
     "typescript": "^5.8.2"
   },
   "dependencies": {
