working on documentations

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-wrapped",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,15 +9,13 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build",
-    "docs": "typedoc"
+    "prepare": "npm run build"
   },
   "type": "commonjs",
   "devDependencies": {
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.11",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.28.1",
     "typescript": "^5.8.2"
   },
   "dependencies": {
