--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "sourceMap": true,
     "declaration": true,
     "emitDeclarationOnly": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ESNext",
@@ -13,9 +15,15 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "incremental": true,
-    "lib": ["ESNext"],
-    "baseUrl": "./",  
-   
+    "lib": [
+      "ESNext"
+    ],
+    "baseUrl": "./",
   },
-  "exclude": ["node_modules", "tmp", "dist","doc"]
+  "exclude": [
+    "node_modules",
+    "tmp",
+    "dist",
+    "doc"
+  ]
 }
