--- a/package.json
+++ b/package.json
@@ -1,20 +1,50 @@
 {
   "name": "axios-wrapped",
   "version": "0.1.0",
-  "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "A wrapped version of Axios with additional functionality",
+  "author": "Sahil Multani",
+  "keywords": [
+    "axios",
+    "http",
+    "request",
+    "promise",
+    "wrapped"
+  ],
+  "main": "dist/node/axios-wrapped.cjs",
+  "module": "dist/esm/axios-wrapped.js",
+  "types": "dist/esm/types/index.d.ts",
+  "unpkg": "dist/axios-wrapped.js",
+  "jsdelivr": "dist/axios-wrapped.js",
   "files": [
     "dist"
   ],
+  "exports": {
+    "import": "./dist/esm/axios-wrapped.js",
+    "require": "./dist/node/axios-wrapped.cjs",
+    "browser": "./dist/axios-wrapped.js"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
     "prepare": "npm run build"
   },
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.11",
+    "cross-env": "^7.0.3",
+    "fs-extra": "^11.3.0",
+    "gulp": "^5.0.0",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
