--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ESNext",
-    "module": "CommonJS",
+    "module": "esnext",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
