--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-wrapped",
-  "version": "0.1.2",
+  "version": "0.1.2-beta.1",
   "description": "A wrapped version of Axios with additional functionality",
   "author": "Sahil Multani",
   "keywords": [
@@ -10,25 +10,24 @@
     "promise",
     "wrapped"
   ],
-  "main": "dist/node/axios-wrapped.cjs",
-  "module": "dist/esm/axios-wrapped.js",
-  "types": "dist/esm/types/index.d.ts",
-  "unpkg": "dist/axios-wrapped.js",
-  "jsdelivr": "dist/axios-wrapped.js",
+  "license": "MIT",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
-    "import": "./dist/esm/axios-wrapped.js",
-    "require": "./dist/node/axios-wrapped.cjs",
-    "browser": "./dist/axios-wrapped.js"
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs"
   },
   "scripts": {
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
-    "prepare": "npm run build"
+    "test": "mocha --no-warnings"
   },
   "type": "module",
   "devDependencies": {
+    "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -36,21 +35,34 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/chai": "^5.2.1",
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22.13.11",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.14",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "chai": "^5.2.0",
     "cross-env": "^7.0.3",
     "fs-extra": "^11.3.0",
     "gulp": "^5.0.0",
+    "javascript-obfuscator": "^4.1.1",
+    "mocha": "^11.1.0",
+    "rollup": "^4.38.0",
+    "rollup-obfuscator": "^4.1.1",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^20.0.0",
     "ts-loader": "^9.5.2",
+    "ts-mocha": "^11.1.0",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.2"
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "lodash": "^4.17.21",
-    "tslib": "^2.8.1"
+    "lodash": "^4.17.21"
   }
 }
