--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "./src",
+    "declarationDir": "./dist/types",
     "sourceMap": true,
     "declaration": true,
     "emitDeclarationOnly": false,
+    "declarationMap": false,
+    "stripInternal": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
@@ -22,8 +25,6 @@
   },
   "exclude": [
     "node_modules",
-    "tmp",
-    "dist",
-    "doc"
+    "**/*.spec.ts"
   ]
 }
