--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "lodash": "^4.17.21"
+    "axios": "^1.8.4"
   }
 }
