fix build for type defs ,working on proper doc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "outDir": "dist",
     "rootDir": "./src",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "emitDeclarationOnly": false,
-    "declarationMap": false,
+    "declarationMap": true,
     "stripInternal": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
