--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dist"
   ],
   "exports": {
-    "import": "./dist/index.mjs",
-    "require": "./dist/index.cjs"
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
   },
   "scripts": {
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
