--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.14",
+    "axios": "^1.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chai": "^5.2.0",
     "cross-env": "^7.0.3",
@@ -50,7 +51,6 @@
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "rollup-plugin-terser": "^7.0.2",
     "sinon": "^20.0.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -58,6 +58,6 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "axios": "^1.8.4"
+    "@rollup/plugin-terser": "^0.4.4"
   }
 }
