--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     }
   },
   "scripts": {
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint .",
+    "prebuild": "npm run lint:fix && npm run lint:check && npm test",
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
     "test": "mocha --no-warnings"
   },
   "type": "module",
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@eslint/js": "^9.24.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
@@ -40,13 +44,21 @@
     "@types/lodash": "^4.17.16",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.14",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "axios": "^1.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chai": "^5.2.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "fs-extra": "^11.3.0",
+    "globals": "^16.0.0",
     "gulp": "^5.0.0",
+    "jiti": "^2.4.2",
     "mocha": "^11.1.0",
+    "prettier": "^3.5.3",
     "rollup": "^4.38.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-dts": "^6.2.1",
@@ -55,9 +67,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2"
-  },
-  "dependencies": {
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0",
     "@rollup/plugin-terser": "^0.4.4"
   }
 }
