--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "sourceMap": true,
     "declaration": true,
     "emitDeclarationOnly": false,
@@ -25,6 +25,5 @@
   },
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
   ]
 }
