--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
     "test": "mocha --no-warnings"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "type": "module",
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -46,7 +49,6 @@
     "@types/node": "^22.13.14",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
-    "axios": "^1.8.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "chai": "^5.2.0",
     "cross-env": "^7.0.3",
@@ -70,5 +72,8 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0",
     "@rollup/plugin-terser": "^0.4.4"
+  },
+  "peerDependencies": {
+    "axios": "^1.8.4"
   }
 }
