--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,9 @@
 name: CI/CD
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -16,10 +14,28 @@ jobs:
           node-version: '18'
       - run: npm ci
       - run: npm test
-
-  publish:
+  
+  check-version:
     needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    outputs:
+      version_changed: ${{ steps.check.outputs.version_changed }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      - id: check
+        name: Check if package.json version changed
+        run: |
+          git diff HEAD^ HEAD --name-only | grep package.json && \
+          git diff HEAD^ HEAD package.json | grep '"version":' && \
+          echo "version_changed=true" >> $GITHUB_OUTPUT || \
+          echo "version_changed=false" >> $GITHUB_OUTPUT
+  
+  publish:
+    needs: check-version
+    if: needs.check-version.outputs.version_changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
