--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     }
   },
   "scripts": {
-    "lint:fix": "eslint . --fix",
-    "lint:check": "eslint .",
+    "lint:check": "eslint 'src/**/*.ts' 'test/**/*.ts'",
+    "lint:fix": "eslint 'src/**/*.ts' 'test/**/*.ts' --fix",
     "prebuild": "npm run lint:fix && npm run lint:check && npm test",
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
     "test": "mocha --no-warnings"
